Archive/efbd9ed766599912b7d1a1b761494145-4f0e144d2529f0880899ab58231ebbe3/output
main.cpp:41:92: error: type/value mismatch at argument 1 in template parameter list for ‘template<class Cond, class T> struct boost::enable_if’
 template <typename T, typename boost::enable_if<boost::is_base_and_derived<IFoo, T>::value >::type>
                                                                                            ^
main.cpp:41:92: error:   expected a type, got ‘boost::is_base_and_derived<IFoo, T>::value’
